development/myfrontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: myfrontend-dev-deployment
  labels:
    app: myfrontend

spec:
  template:
    metadata:
      labels:
        app: myfrontend
    spec:
      containers:
        - name: myfrontend-container
          image: kolosowski/devops-project-frontend:dev0.1
          ports:
            - containerPort: 80
  replicas: 1
  selector:
    matchLabels:
      app: myfrontend
