development/mymongo-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mymongo-dev-deployment
  labels:
    app: mymongo
    type: db

spec:
  template:
    metadata:
      name: mymongo-dev-pod
      labels:
        app: mymongo
        type: db
    spec:
      containers:
        - name: mymongo-container
          image: mongo
          volumeMounts:
            - mountPath: /data/db
              name: mongo-dev-volume
              subPath: mongo
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-dev-volume
          persistentVolumeClaim:
            claimName: mymongo-dev-pvc

  selector:
    matchLabels:
      app: mymongo
      type: db
