development/myredis-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: myredis-dev-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: myredis
    type: db
